examples/test/testpolicy19270.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19270
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key22: value39
      key39: value4
      key8: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value22
      podSelector:
        matchLabels:
          key28: value9
